--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,1 @@
-* {
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
-}
-
-html,
-body {
-	max-width: 360px;
-	overflow-x: hidden;
-}
-
-body {
-	color: #000;
-	background: #fff;
-}
-
-a {
-	color: inherit;
-	text-decoration: none;
-}
+@import '../assets/css/styles.css';
